Added introduction, 1-3 chapters, applactions

--- a/2-chapter.tex
+++ b/2-chapter.tex
@@ -1,8 +1,33 @@
 \newpage
-\section{\Large Глава}
-Текст.
-\subsection{Подглава}
-Текст
+\section{\Large Разработка программы для классификации с использованием библиотеки Scikit-learn}\vspace{-7mm}
+\subsection{Обзор существующих библиотек для машинного обучения}
+На текущий момент существует множество готовых реализаций алгоритмов машинного обучения и не имеет смысла делать то же самое с нуля, если задача не имеет каких-то особенностей, делающих невозможным использование готовых библиотек. Каждая из библиотек, рассматриваемых в работе, хороша в своей области, успешно используется в решении задач и проверена временем. Рассмотрим некоторые из популярных библиотек для языка программирования Python.
+\subsubsection{Scikit-learn}
+Scikit-learn -- это одна из самых популярных библиотек для языка Python, в которой реализованы основные алгоритмы машинного обучения, такие как классификация различных типов, регрессия и кластеризация данных. Библиотека распространяется свободно и является бесплатной для использования в своих проектах.
+\par
+Данная библиотека создана на основе двух других -- NumPy и SciPy, имеющих большое количество готовых реализаций часто используемых математических и статистических функций. Библиотека хорошо подходит для простых и средней сложности задач, а также для людей, которые только начинают свой путь в изучении машинного обучения.
+\subsubsection{Theano}
+Theano -- это библиотека, в которой содержится базовый набор инструментов для машинного обучения и конфигурирования нейросетей. Так же у данной библиотеки есть встроенные методы для эффективного вычисления математических выражений, содержащих многомерные массивы.
+\par
+Theano тесно интегрирована с библиотекой NumPy, что дает возможность просто и быстро производить вычисления. Главным преимуществом библиотеки является возможность использования GPU без изменения кода программы, что дает преимущество при выполнении ресуркоемких задач. Также возможно использование динамической генерации кода на языке программирования C.
+\subsubsection{TensorFlow}
+Самой популярной и масштабной по применению является библиотека TensorFlow, используемая для глубокого машинного обучения. Библиотека разрабатывается в тесном сотрудничестве с компанией Google и применяется в большинстве их проектов где используется машинное обучение. Библиотека использует систему многоуровневых узлов, которая позволяет вам быстро настраивать, обучать и развертывать искусственные нейронные сети с большими наборами данных.
+\par
+Библиотека хорошо подходит для широкого семейства техник машинного обучения, а не только для глубокого машинного обучения. Программы с использованием TensorFlow можно компилировать и запускать как на CPU, так и на GPU. Также данная библиотека имеет обширный встроенный функционал логирования, собственный интерактивный визуализатор данных и логов.
 
+\subsection{Алгоритм работы и структура программы}
+Целью разработки программы была классификация температурных данных с разными разамерами опухоли и графическое представление получившихся результатов. Блок-схема получившейся программы представлена на рисунке~\ref{ris:nir-7-blockscheme}. 
+\par
+На первом этапе температурные данные считываются из CSV-файла с помощью библиотеки Pandas. Название папки с файлом моделей определенного размера опухоли хранится в отдельной переменной. Затем производится создание и обучение моделей классификации методов SVM, k-ближайших соседей и наивного байесовского классификатора на данных обучающей выборки.
+\par
+Следующим этам  после обучение идет прогнозирование или классификация с использованием данных тестовой выборки. После получения результирующих классов из модели необходимо сравнить их с теми, которые уже известны для определения точности работы алгоритма. После обработки результатов классификации получившиеся данные отображаются на круговых диаграммах отдельно для каждого алгоритма.
+\imgh{0.325\linewidth}{nir-7-blockscheme}{Блок-схема программы для классификации температурных данных}
+
+\subsection{Визуализация данных}
+Для визуализации данных моделей и результатов классификации была выбрана библиотека для языка Python Matplotlib. Данная библиотека позволяет строить графики, гистограммы, круговые диаграммы, карты распределения и 3D-объекты (рисунок~\ref{ris:matplotlib_example}). Возможна детальная настройка цветов линий, надписей, расположения элементов и подписей к графикам, осям и значениям.
+\\
+\imgh{1\linewidth}{matplotlib_example}{Примеры графиков, построенных с помощью библиотеки Matplotlib}
+\par
+Библиотека содержит множество разных способов построения и отображения объектов, имея многослойную структуру. За счет этого имеется возможность накладывать графики друг на друга. Графики, построенные через Matplotlib отображаются в отдельном окне при запуске программы из терминала, при использовани Jupter Notebook отображаются прямо в тексте. Также имеется возможность встроить графику в программу с графическим интерфейсом на Python, реализованную с помощью библиотеки Tkinter.
 %------------------------------------------------------------------------------------------------------
 %------------------------------------------------------------------------------------------------------
