--- a/3-chapter.tex
+++ b/3-chapter.tex
@@ -1,78 +1,52 @@
 \newpage
-\section{\Large Разработка программы для пакетной обработки температурных данных}
-Текст (рисунок ~\ref{ris:image_500x400})
+\section{\Large Классификация температурных данных компьютерного моделирования}\vspace{-7mm}
+\subsection{Данные для классификации}
+В работе использовались данные компьютерного моделирования яркостной температуры молочных желез больных и здоровых пациентов. Данные были представлены в виде девяти значений температуры на поверхности кожи и девяти значений внутренней температуры, согласно методике обследования методом радиотермометрии. Схема расположения точек при замере температур представлена на рисунке~\ref{ris:rtm-res-scheme}. Отдельным атрибутом являлся класс модели. Для здоровых моделей значения класса было равно нулю, а для больных -- единице. Исходя из количества классов, классификацию в данной работе можно считать бинарной.
 \\
-\imgh{1\linewidth}{image_500x400}{Подпись к картинке}
+\imgh{0.75\linewidth}{rtm-res-scheme}{Пример данных температурных данных компьютерного моделирования, где в столбце «target» здоровые — «0», больные — «1»}
 \par
-Текст (рисунок ~\ref{ris:image_600x300})
+Для исследования были взяты температурные данные моделей с радиусом опухоли 0.5 см и 0.75 см. Данные были представлены в виде двух CSV-файлов, в которых находилось по 160 моделей для каждого размера опухоли соответственно (рисунок~\ref{ris:data_example}). Одна половина моделей состояла из здоровых пациентов, а другая из больных. На подготовительном этапе данные были разбиты на обучающую и тестовую выборки в соотношении один к четырем.
 \\
-\imgh{1\linewidth}{image_600x300}{Подпись к картинке}
+\imgh{1\linewidth}{data_example}{Пример данных температурных данных компьютерного моделирования, где в столбце «target» здоровые — «0», больные — «1»}
 
 %------------------------------------------------------------------------------------------------------
 
-\subsection{Подглава}
-Текст:
-\begin{itemize}
-	\item[-] Элемент списка;
-	\item[-] Элемент списка;
-	\item[-] Элемент списка;
-	\item[-] Элемент списка;
-	\item[-] Элемент списка.
-\end{itemize}
+\subsection{Частотный анализ классифицируемых данных}
+Перед классификацией температурных данных был проведен частотный анализ для исследования распределения температуры в зависимости от того, в какой точке она была замерена и есть ли у данной модели опухоль. Частотный анализ был произведен с помощью библиотеки Pandas, а графическое отображение результатов с помощью Matplotlib. Точки, которые были проанализрованы соответствуют точкам на схеме измерений согласно методу РТМ (рисунок~\ref{ris:rtm-res-scheme}). 
 \par
-Текст
-
-%------------------------------------------------------------------------------------------------------
-\subsection{Подглава}
-Текст (таблица 1).
-\begin{table}[H]
-	\begin{flushleft}\hspace{1.25cm}\Large Таблица 1 -- \label{tab:exp2values}Заголовок таблицы\end{flushleft}
-	\begin{center}
-		{\Large
-			\begin{tabular}{|c|c|c|c|}
-				\hline
-				\hspace{1cm}$x$\hspace{1cm} & \hspace{1cm}$y$\hspace{1cm} & \hspace{1cm}$z$\hspace{1cm} & \hspace{1cm}$T$\hspace{1cm} \\
-				\hline
-				$x_1$ & $y_1$ & $z_1$ & $T_1$ \\
-				\hline
-				$x_2$ & $y_2$ & $z_2$ & $T_2$ \\
-				\hline
-				... & ... & ... & ... \\
-				\hline
-				$x_n$ & $y_n$ & $z_n$ & $T_n$ \\
-				\hline
-			\end{tabular}
-		}
-	\end{center}
-\end{table}
+Сначала для исследования была взяла точка 0ртм. Результаты исследования представлены в виде диаграммы частот (рисунок~\ref{ris:0rtm}), где верхняя диаграмма -- это здоровые пациенты, а нижняя -- больные.
+\imgh{1\linewidth}{0rtm}{Диаграмма частот температур в точке 0ртм. Верхняя диаграмма — здоровые пациенты, нижняя — больные}
 \par
-Текст
+Изучив диаграммы, можно заметить, что в данной точке у пациентов чаще встречаются более высокие температуры, нежели у здоровых. Точка 0ртм больше всего подверждена воздействию от опухоли в температурном смысле, так как находится ровно в центре молочной железы.
+\par
+Следующей для исследования была рассмотрена точка 3ртм, диаграмма частот температур которой представлена на рисунке~\ref{ris:3rtm}. Для данной точки можно наблюдать схожую картину с точкой 0ртм -- тут так же больше значений со средней температурой у больных пациентов, несмотря на то, что эта точка не является центральной.
+\imgh{1\linewidth}{3rtm}{Диаграмма частот температур в точке 3ртм. Верхняя диаграмма — здоровые пациенты, нижняя — больные}
+\par
+Также была рассмотрена точка 7ртм, для которой как видно из диаграммы частот температур (рисунок~\ref{ris:7rtm}) ситуация аналогична с точками 0ртм и 3ртм.
+\imgh{1\linewidth}{7rtm}{Диаграмма частот температур в точке 7ртм. Верхняя диаграмма — здоровые пациенты, нижняя — больные}
 
 %------------------------------------------------------------------------------------------------------
 
-\subsection{Подглава}\vspace{-7mm}
-\subsubsection{Параграф}
-Текст (листинг 1).
-\par Листинг 1 -- Подпись к листингу\\
-\large
-\begin{verbatim}
-class Program
-{
-    static void Main(string[] args)
-    {
-        Thread threadA = new Thread(() => Console.WriteLine("ThreadA"));
-        Thread threadB = new Thread(() => Console.WriteLine("ThreadB"));
-        threadA.Start();
-        threadB.Start();
-    }
-}
-\end{verbatim}
-\Large
+\subsection{Результаты классификации для моделей с опухолью радиусом 0.5 см}
+Для моделей с разными размерами опухоли отдельно была посчитана точность определения класса и построены круговые диаграммы для наглядности, где как «1» отмечены верно классифицированные модели, а как «0» -- неверно классифицированные.
 \par
-Текст
+Как видно из диаграммы на рисунке~\ref{ris:05}, для моделей с радиусом опухоли 0.5 см лучший результат показал метод SVM, точность определения классов которого равна 57.5\%. Хуже всего для данных моделей показал себя наивный байесовский классификатор с точностью классификации 27.5\%
+\imgh{1\linewidth}{05}{Диаграммы с точностью определения класса для трех методов классификации моделей с размером опухоли R=0.5 см («1» – классифицировано верно, «0» – классифицировано неверно)}
 
-\subsubsection{Параграф}
-Текст
+%------------------------------------------------------------------------------------------------------
+\subsection{Результаты классификации для моделей с опухолью радиусом 0.75 см}
+Рассмотрим результаты классификации для моделей с радиусом опухоли 0.75 см (рисунок~\ref{ris:075}). Как видно из диаграмм, для данных моделей наивный байесовский классификатор сработал лучше, для для моделей с радиусом опухоли 0.5 см, показав результат точности равный 70\%. Точность определения классов методом SVM опять оказалась лучше, чем у остальных -- 72.5%.
+\par
+Исходя из этого, можно сделать вывод, что точность классификации сильно зависит от размеров опухоли и выбранного алгоритма классификации.
+\imgh{1\linewidth}{075}{Диаграммы с точностью определения класса для трех методов классификации моделей с размером опухоли R=0.75 см («1» – классифицировано верно, «0» – классифицировано неверно)}
+
+%------------------------------------------------------------------------------------------------------
+
+\subsection{Результаты классификации для всех моделей вместе}
+В качестве заключительного эксперимента было принято решение смешать вместе данные моделей с радиусом 0.5 см и 0.75 см. В качестве обучающей выборки использовались 180 моделей, а в качестве тестовой -- 60 моделей. После чтения из файла данные были перемешаны между собой. 
+\par
+Результаты представлены на диаграмме (рисунок~\ref{ris:075}). В этот раз лучшим по точности определения класса стал наивный байесовский классификатор с точностью 70\%, которая не изменилась по сравнению с предыдущим экспериментом. А метод  SVM, показавший лучший результат в предыдущих двух экспериментах, в этот раз определил классы моделей с точностью 66.7\%, такой же как и метод k-ближайших соседей.
+\imgh{1\linewidth}{all}{Диаграммы с точностью определения класса для трех методов классификации моделей с размером опухоли R=0.5 см и R=0.75 см вместе («1» – классифицировано верно, «0» – классифицировано неверно)}
 
 %------------------------------------------------------------------------------------------------------
 %------------------------------------------------------------------------------------------------------
