--- a/introdution.tex
+++ b/introdution.tex
@@ -1,3 +1,5 @@
 \newpage
 \section{Введение}
-Текст
+На протяжении всего времени существования человечества проблема возникновения, исследования и лечения различных заболеваний у человека является важной задачей медицинской деятельности. Особенно это касается онкологических заболеваний. На сегодняшний день нет четкой причины, по которой люди заболевают раком, но существует множество способов ранней диагностики таких заболеваний~\cite{fear2000}.
+\par В данной работе рассматривается использование результатов моделирования, соответствующих методике микроволновой радиотермометрии молочных желез на основе работы специального диагностического комплекса РТМ-01-РЭС. Также рассматриваются популярные алгоритмы классификации данных и библиотеки для языка программирования Python, реализующие данные алгоритмы.
+\par Главной целью работы является проведение исследования влияния размеров опухоли на точность  диагностики раковых заболеваний на основе данных микроволновой радиотермометрии, полученных в ходе компьютерного моделирования. Так как проведение классификации только на температурных данных может не дать хорошего результата, необходимо выявить какой из алгоритмов будет лучше работать с разными размерами опухоли и вариациями остальных параметров.
