--- a/bibliography.tex
+++ b/bibliography.tex
@@ -3,7 +3,7 @@
 \begin{thebibliography}{3}
 	\bibitem{bardati} Bardati, F. Modeling the Visibility of Breast Malignancy by a MicrowaveRadiometer [Текст] / F. Bardati, S. Iudicello. — Biomed. Engineering. -- 2008. -- Vol.55 (6). -- С. 214-221.
 	
-	\bibitem{cSharp3} Albahari, B. C\# 4.0 in a Nutshell [Текст] / B. Albahari, J. Albahari . -- O'Reilly Media. -- 4th Edition. -- 2010. -- 1058 С.
+	\bibitem{fear2000} Fear, K.E. Microwave detection of breast cancer [Текст] / K.E. Fear, M. Ctuchly. -- IEEE Trans. Microwave Theory Tech. -- 2000. -- Vol.48 (11). -- С. 1854-1863.
 	
 	\bibitem{pryor2011} Pryor, R.W. Multiphysics Modeling Using COMSOL: A First Principles Approach [Текст] / R.W. Pryor -- Jones \& Barlett Publishers, Inc. -- 2011. -- 872 с.
 	
