--- a/НИР отчет.tex
+++ b/НИР отчет.tex
@@ -42,6 +42,8 @@
 \selectfont
 
 
+\usepackage{pdfpages}
+
  %---------------- заголовки ----------- %
 \usepackage{titlesec}
 \usepackage{enumerate}
@@ -186,5 +188,7 @@
 
 %Приложения
 \input{applications}
+
+\includepdf[pages=-]{tz.pdf}
 
 \end{document}
