--- a/3-chapter.tex
+++ b/3-chapter.tex
@@ -1,7 +1,7 @@
 \newpage
 \section{\Large Классификация температурных данных компьютерного моделирования}\vspace{-7mm}
 \subsection{Данные для классификации}
-В работе использовались данные компьютерного моделирования яркостной температуры молочных желез больных и здоровых пациентов. Данные были представлены в виде девяти значений температуры на поверхности кожи и девяти значений внутренней температуры, согласно методике обследования методом радиотермометрии. Схема расположения точек при замере температур представлена на рисунке~\ref{ris:rtm-res-scheme}. Отдельным атрибутом являлся класс модели. Для здоровых моделей значения класса было равно нулю, а для больных -- единице. Исходя из количества классов, классификацию в данной работе можно считать бинарной.
+В работе использовались данные компьютерного моделирования яркостной температуры молочных желез больных и здоровых пациентов. Данные были представлены в виде девяти значений температуры на поверхности кожи и девяти значений внутренней температуры, согласно методике обследования методом радиотермометрии~\cite{fear2000}~\cite{bardati}. Схема расположения точек при замере температур представлена на рисунке~\ref{ris:rtm-res-scheme}~\cite{vesninSovMicrowave}. Отдельным атрибутом является класс модели. Для здоровых моделей значения класса было равно нулю, а для больных -- единице. Исходя из количества классов, классификацию в данной работе можно считать бинарной.
 \\
 \imgh{0.75\linewidth}{rtm-res-scheme}{Пример данных температурных данных компьютерного моделирования, где в столбце «target» здоровые — «0», больные — «1»}
 \par
@@ -12,7 +12,7 @@
 %------------------------------------------------------------------------------------------------------
 
 \subsection{Частотный анализ классифицируемых данных}
-Перед классификацией температурных данных был проведен частотный анализ для исследования распределения температуры в зависимости от того, в какой точке она была замерена и есть ли у данной модели опухоль. Частотный анализ был произведен с помощью библиотеки Pandas, а графическое отображение результатов с помощью Matplotlib. Точки, которые были проанализрованы соответствуют точкам на схеме измерений согласно методу РТМ (рисунок~\ref{ris:rtm-res-scheme}). 
+Перед классификацией температурных данных был проведен частотный анализ для исследования распределения температуры в зависимости от того, в какой точке она была замерена и есть ли у данной модели опухоль. Частотный анализ был произведен с помощью библиотеки Pandas, а графическое отображение результатов с помощью Matplotlib. Точки, которые были проанализрованы соответствуют точкам на схеме измерений согласно методу РТМ (рисунок~\ref{ris:rtm-res-scheme}). Код программы для отображения результатов частотного анализа находится в приложении (листинг А.2).
 \par
 Сначала для исследования была взяла точка 0ртм. Результаты исследования представлены в виде диаграммы частот (рисунок~\ref{ris:0rtm}), где верхняя диаграмма -- это здоровые пациенты, а нижняя -- больные.
 \imgh{1\linewidth}{0rtm}{Диаграмма частот температур в точке 0ртм. Верхняя диаграмма — здоровые пациенты, нижняя — больные}
@@ -27,14 +27,14 @@
 
 %------------------------------------------------------------------------------------------------------
 
-\subsection{Результаты классификации для моделей с опухолью радиусом 0.5 см}
+\subsection{Результаты классификации моделей с опухолью радиусом 0.5 см}
 Для моделей с разными размерами опухоли отдельно была посчитана точность определения класса и построены круговые диаграммы для наглядности, где как «1» отмечены верно классифицированные модели, а как «0» -- неверно классифицированные.
 \par
 Как видно из диаграммы на рисунке~\ref{ris:05}, для моделей с радиусом опухоли 0.5 см лучший результат показал метод SVM, точность определения классов которого равна 57.5\%. Хуже всего для данных моделей показал себя наивный байесовский классификатор с точностью классификации 27.5\%
 \imgh{1\linewidth}{05}{Диаграммы с точностью определения класса для трех методов классификации моделей с размером опухоли R=0.5 см («1» – классифицировано верно, «0» – классифицировано неверно)}
 
 %------------------------------------------------------------------------------------------------------
-\subsection{Результаты классификации для моделей с опухолью радиусом 0.75 см}
+\subsection{Результаты классификации моделей с опухолью радиусом 0.75 см}
 Рассмотрим результаты классификации для моделей с радиусом опухоли 0.75 см (рисунок~\ref{ris:075}). Как видно из диаграмм, для данных моделей наивный байесовский классификатор сработал лучше, для для моделей с радиусом опухоли 0.5 см, показав результат точности равный 70\%. Точность определения классов методом SVM опять оказалась лучше, чем у остальных -- 72.5%.
 \par
 Исходя из этого, можно сделать вывод, что точность классификации сильно зависит от размеров опухоли и выбранного алгоритма классификации.
