--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,3 +1,7 @@
 \newpage
 \section{Заключение}
-Текст
+В данной работе были рассмотрены некоторые из популярных библиотек языка программирования Python для решения задач машинного обучения. Был описан принцип работы таких алгоритмов классификации как метод опорных векторов (SVM), k-ближайших соседей и наивный байесовский классификатор.
+\par
+Реализована программа для классификации данных компьютерного моделирования яркостной температуры на языке Python с помощью библиотеки Scikit-learn. Температурные данные были разбиты на обучающую и тестовую выборки и классифицированы с помощью получившейся программы.
+\par
+Исходя из результатов классификации моделей был сделан вывод, что точность классификации данных сильно зависит от используемого алгоритма и размеров опухоли. Причем, если использовать все данные вместе -- то результат сильно отличается от экспериментов, проведенных для каждого размера опухоли отдельно. Лучше всего в проведенных экспериментах себя показал метод опорных векторов (SVM) и наивный байесовский классификатор.
