--- a/applications.tex
+++ b/applications.tex
@@ -144,3 +144,59 @@ plt.show()
 \end{verbatim}
 \vspace{8mm}
 \Large
+\par
+Листинг А.2 -- Код программы для отображения результатов частотного анализа
+\vspace{8mm}
+\large
+\begin{verbatim}
+import numpy as np
+import pandas as pd
+from sklearn import svm
+import matplotlib.pyplot as plt
+import matplotlib
+from sklearn import neighbors
+from sklearn.naive_bayes import GaussianNB
+from collections import Counter
+from collections import OrderedDict
+from scipy.interpolate import spline
+
+modelFolder = 'all'
+data = pd.read_csv(modelFolder + '/data.csv', 
+delimiter=',', 
+names=['0ртм', '1ртм', '2ртм', '3ртм', '4ртм', '5ртм', '6ртм', '7ртм', '8ртм', 
+'0ик', '1ик', '2ик', '3ик', '4ик', '5ик', '6ик', '7ик', '8ик', 'target'])
+
+point = '0ртм'
+filter1 = data.target == 0
+fr1 = OrderedDict(sorted(dict(Counter(data.loc[filter1][point])).items()))
+names1 = list(fr1.keys())
+values1 = list(fr1.values())
+
+x_smooth1 = np.linspace(min(names1), max(names1), 50)
+y_smooth1 = spline(names1, values1, x_smooth1)
+
+filter2 = data.target == 1
+fr2 = OrderedDict(sorted(dict(Counter(data.loc[filter2][point])).items()))
+names2 = list(fr2.keys())
+values2 = list(fr2.values())
+
+x_smooth2 = np.linspace(min(names2), max(names2), 50)
+y_smooth2 = spline(names2, values2, x_smooth2)
+
+
+fig, axs = plt.subplots(2, 1, figsize=(10, 10), sharey=True)
+plt.subplots_adjust(wspace=0, hspace=0.17)
+axs[0].bar(names1, values1)
+#axs[0].plot(x_smooth1, y_smooth1, color='tab:orange')
+axs[0].tick_params(axis='both', which='major', labelsize=15)
+axs[0].set_title('Здоровые пациенты')
+
+axs[1].bar(names2, values2)
+#axs[1].plot(x_smooth2, y_smooth2, color='tab:orange')
+axs[1].tick_params(axis='both', which='major', labelsize=15)
+axs[1].set_title('Больные пациенты')
+plt.savefig(point + '.png')
+plt.show()
+\end{verbatim}
+\vspace{8mm}
+\Large
