Последние правки перед сдачей работы

--- a/1-chapter.tex
+++ b/1-chapter.tex
@@ -10,7 +10,7 @@
 \\
 \imgh{1\linewidth}{scikitlearn-map}{Схема для определения алгоритма классификации для конкретной задачи}
 \subsection{Метод опорных векторов}
-Метод опорных вектором или SVM -- это метод статистической классификации~\cite{сristianini}. Он широко используется для задач различного рода и хорошо себя в них показывает~\cite{crammer}.
+Метод опорных вектором или SVM -- это метод статистической классификации~\cite{kristianini}. Он широко используется для задач различного рода и хорошо себя в них показывает~\cite{crammer}.
 \par
 Основной идеей метода является представление атрибутов данных в виде векторов и переход в пространство более высокой размерности, чем получившееся на этапе представления векторами. Затем ищется гиперплоскость с максимальным зазором в пространстве между объектами разных классов~\cite{rashka}~\cite{statnikov}.
 \par
@@ -43,7 +43,7 @@ D_{E} = \sqrt{\sum_{i}^{n}(x_{i} - y_{i})^{2}},
 \end{equation}
 где $x_{i}, y_{i}$ -- значения атрибутов в наборе данных.
 \subsection{Наивный байесовский классификатор}
-Наивный байесовский классификатор является простым вероятностным классификатором и основывается на применении теоремы Байеса со строгими предположениями о независимости~\cite{potapov}. Хотя наивный байесовский классификатор редко применим к большинству реальных задач, но зачастую в определенных задачах он демонстрирует хорошие результаты и часто конкурирует с более сложными методами, такими как SVM и классификационным деревьями~\cite{Mirmozaffari}. Классификация данным методом очень зависит от распределения зависимостей атрибутов, а не от самих зависимостей~\cite{juravlev}.
+Наивный байесовский классификатор является простым вероятностным классификатором и основывается на применении теоремы Байеса со строгими предположениями о независимости~\cite{potapov}~\cite{danilovsv}. Хотя наивный байесовский классификатор редко применим к большинству реальных задач, но зачастую в определенных задачах он демонстрирует хорошие результаты и часто конкурирует с более сложными методами, такими как SVM и классификационным деревьями~\cite{Mirmozaffari}. Классификация данным методом очень зависит от распределения зависимостей атрибутов, а не от самих зависимостей~\cite{juravlev}.
 \par
 Вероятностная модель классификатора:
 \begin{equation}\label{eq:eq3}
