--- a/applications.tex
+++ b/applications.tex
@@ -1,5 +1,5 @@
 \newpage
-\addcontentsline{toc}{section}{Приложение А} 
+\addcontentsline{toc}{section}{Приложение А (обязательное) Программный код} 
 \begin{center} 
     \textbf{Приложение А}
     \\
@@ -200,3 +200,11 @@ plt.show()
 \end{verbatim}
 \vspace{8mm}
 \Large
+\newpage
+\addcontentsline{toc}{section}{Приложение Б (обязательное) Лист задания}
+фффф
+\newpage
+фффф
+\newpage
+\addcontentsline{toc}{section}{Приложение В (обязательное) Полученные при выполнении работы компетенции}
+ффф
