--- a/bibliography.tex
+++ b/bibliography.tex
@@ -3,7 +3,7 @@
 \begin{thebibliography}{3}
 	\bibitem{bardati} Bardati, F. Modeling the Visibility of Breast Malignancy by a MicrowaveRadiometer / F. Bardati, S. Iudicello. -- Текст : непосредственный // Biomed. Engineering. -- 2008. -- Vol.55 (6). -- С. 214-221.
 	
-	\bibitem{сristianini} Cristianini, Т. An Introduction to Support Vector Machines and Other Kernel-based Learning Methods / Nello Cristianini, John Shawe-Taylor. -- Текст : непосредственный // Cambridge University Press. -- 2000. -- 204 с.
+	\bibitem{kristianini} Cristianini, Т. An Introduction to Support Vector Machines and Other Kernel-based Learning Methods / Nello Cristianini, John Shawe-Taylor. -- Текст : непосредственный // Cambridge University Press. -- 2000. -- 204 с.
 	
 	\bibitem{crammer} Crammer, K. On the algorithmic implementation of multiclass kernel-based vector machines / Koby Crammer, Yoram Singe. -- Текст : непосредственный // Journal of Machine Learning Research. -- 2002. -- № 2. -- С. 265–292.
 	
@@ -45,7 +45,10 @@
 	
 	\bibitem{vyugin} Вьюгин, В. Математические основы теории машинного обучения и прогнозирования / Владимир Вьюгин. -- Текст : электронный // МЦМНО. -- 2013. -- 390 с.
 	
-	\bibitem{gudfellow} Гудфеллоу, Я.  Глубокое обучение / Гудфеллоу Я., Бенджио И., Курвилль А. -- Текст : электронный // Москва : ДМК Пресс. -- 2017. -- 652 с.				
+	\bibitem{gudfellow} Гудфеллоу, Я.  Глубокое обучение / Гудфеллоу Я., Бенджио И., Курвилль А. -- Текст : электронный // Москва : ДМК Пресс. -- 2017. -- 652 с.	
+	
+	\bibitem{danilovsv} Данилов, С.  Интеллектуальный анализ данных с использованием системы Rapid
+	Miner / С.В. Данилов. -- Текст : электронный // Казанский (Приволжский) федеральный университет. -- 2014. -- 43 с.			
 	
 	\bibitem{dauni} Дауни, А. Байесовские модели / Дауни А.Б., пер. с анг. В. А. Яроцкого -- Текст : непосредственный // Москва : ДМК Пресс. -- 2018. -- 182 с.				
 	
