--- a/НИР отчет.tex
+++ b/НИР отчет.tex
@@ -156,7 +156,7 @@
 \begin{document}
 \renewcommand*\contentsname{\parindent=1.25cm Содержание}
 \Large
-\setcounter{page}{5} % начать нумерацию с номера три
+\setcounter{page}{2} % начать нумерацию с номера три
 
 \newpage
 % это оглавление, которое генерируется автоматически
@@ -189,6 +189,6 @@
 %Приложения
 \input{applications}
 
-\includepdf[pages=-]{tz.pdf}
+%\includepdf[pages=-]{tz.pdf}
 
 \end{document}
